[gd_scene load_steps=3 format=3 uid="uid://byqq5fxg0508o"]

[ext_resource type="Theme" uid="uid://f43cvmfrcj6c" path="res://assets/themes/dialog-background.tres" id="1_6frfb"]
[ext_resource type="Script" path="res://scenes/installer-configuration-dialog/installer-configuration-dialog.gd" id="2_ymo0l"]

[node name="SelectConfigureInstaller" type="Panel"]
custom_minimum_size = Vector2(700, 340)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6frfb")
script = ExtResource("2_ymo0l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Installer Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InstallerConfigurationName" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="InstallerConfigurationNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InstallerConfigurationName"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "Configuration Name:"
horizontal_alignment = 2

[node name="InstallerConfigurationNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InstallerConfigurationName"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "A friendly name that shows in Release Manager. "
caret_blink = true
caret_blink_interval = 0.5

[node name="WindowsPackageHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="WindowsPathLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/WindowsPackageHBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "Windows Package:"
horizontal_alignment = 2

[node name="WindowsPathLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/WindowsPackageHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the godot-ignition .zip package. Download or build it and then select it."
caret_blink = true
caret_blink_interval = 0.5

[node name="LinuxInstallerPackageHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LinuxPackagePathLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LinuxInstallerPackageHBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "Linux Package:"
horizontal_alignment = 2

[node name="LinuxPackagePathLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LinuxInstallerPackageHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the godot-ignition .zip package. Download or build it and then select it."
caret_blink = true
caret_blink_interval = 0.5

[node name="LicenseTypeHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LicenseTypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LicenseTypeHBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "License:"
horizontal_alignment = 2

[node name="LicenseTypeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LicenseTypeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the godot-ignition .zip package. Download or build it and then select it."
item_count = 3
popup/item_0/text = "mit"
popup/item_0/id = 0
popup/item_1/text = "proprietary"
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 2

[node name="AutoUpdatesHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="AutoUpdatesLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdatesHBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "User Options:"
horizontal_alignment = 2

[node name="AutoUpdatesEnabledCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdatesHBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Auto-install updates at startup"

[node name="AutoUpdateOptionsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="AutoUpdateOptionEnabledCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Notify me about updates at startup"

[node name="AutoUpdateOptionsHBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer2"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="AutoUpdateOptionEnabledCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "I'll update manually on my own"

[node name="AutoUpdateOptionsHBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="DisconnectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer3"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Disconnect"

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HiddenButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="WindowsPacakgeSelectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="LinuxPacakgeSelectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="HiddenButton3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="HiddenButton5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="HiddenButton6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="HiddenButton4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Select"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Save"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(250, 200)
size = Vector2i(700, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutoUpdateOptionsHBoxContainer3/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer/WindowsPacakgeSelectButton" to="." method="_on_windows_pacakge_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer/LinuxPacakgeSelectButton" to="." method="_on_linux_pacakge_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonsVBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
